statum-macros/tests/ui/invalid_transition_custom_result_enum.stderr
error: Error: transition method `Machine<Draft>::decide` returns an unsupported type.
       Fix: return `Machine<NextState>` directly, or wrap that same machine path in a supported `Option`, `Result`, or `statum::Branch` shape.
       Reason: expected the impl target machine path directly, a source-backed type alias that expands to it, or that same machine path wrapped in a supported `Option`, `Result`, or `Branch` shape.

       Expected:
         fn decide(self) -> Machine<NextState>

       Actual:
         Result < Machine < Accepted > , Machine < Rejected > >

       Notes:
         Supported wrappers are `::core::option::Option<...>`, `::core::result::Result<..., E>`, and `::statum::Branch<..., ...>`, plus ordinary source-declared type aliases that expand to those shapes.
         Imported aliases, macro-generated aliases, include-generated aliases, ambiguous aliases, and foreign machine paths are still rejected because transition introspection only follows source-backed type aliases it can resolve in-module.
  --> tests/ui/invalid_transition_custom_result_enum.rs:31:38
   |
31 |     fn decide(self, accept: bool) -> Result<Machine<Accepted>, Machine<Rejected>> {
   |                                      ^^^^^^
